--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
     <div class="container">
         <div class="card-container">
 
-            <div class="card">1</div>
-            <div class="card">2</div>
-            <div class="card">3</div>
-            <div class="card">4</div>
-            <div class="card">5</div>
-            <div class="card">6</div>
-            <div class="card">7</div>
-            <div class="card">8</div>
-            <div class="card">9</div>
-            <div class="card">10</div>
-            <div class="card">11</div>
-            <div class="card">12</div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
+            <div class="card"><img src="./img/card-pictures/card-back.png" alt=""></div>
 
         </div>
     </div>
+    <button onclick="reloadThePage()">Reload</button>
 
     <script src="index.js"></script>
     
