--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         </div>
     </div>
-    <button onclick="reloadThePage()">Reload</button>
+    <!-- <button class="start-game">Start</button> -->
+    <button onclick="reloadThePage()">Reset</button>
 
     <script src="index.js"></script>
     
