--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- <button class="start-game">Start</button> -->
     <button onclick="reloadThePage()">Reset</button>
 
+    <script src="index1.js"></script>
     <script src="index.js"></script>
     
 </body>
